# src/datetime-picker/api.ts
@@ -302,6 +302,15 @@ namespace nasl.ui {
       }
     })
     disabled: nasl.core.Boolean = false;
+    @Prop({
+      group: '主要属性',
+      title: '占位提示',
+      description: '',
+      setter: {
+        concept: "InputSetter"
+      }
+    })
+    placeholder: nasl.core.String = '请选择';
     @Event({
       title: '确认',
       description: '点击完成按钮时触发的事件'
